--- a/Java Files/POO/20210116-AtletasComFicheiros/src/main/resources/fxml/JanelaPrincipalScene.fxml
+++ b/Java Files/POO/20210116-AtletasComFicheiros/src/main/resources/fxml/JanelaPrincipalScene.fxml
@@ -7,38 +7,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane onKeyReleased="#teclaPressionadaAction" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.upskill.listatarefas.ui.JanelaPrincipalSceneController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-            <Menu fx:id="menuFile" mnemonicParsing="false" onShowing="#menuFileOnShowing" text="File">
-              <items>
-                  <MenuItem fx:id="menuItemOpenBinary" mnemonicParsing="false" onAction="#menuItemOpenBinaryAction" text="Open Binary" />
-                  <MenuItem fx:id="menuItemOpenBinaryFrom" mnemonicParsing="false" onAction="#menuItemOpenBinaryFromAction" text="Open Binary From..." />
-                  <MenuItem fx:id="menuItemSaveBinary" mnemonicParsing="false" onAction="#menuItemSaveBinaryAction" text="Save Binary" />
-                  <MenuItem fx:id="menuItemSaveBinaryAs" mnemonicParsing="false" onAction="#menuItemSaveBinaryAsAction" text="Save Binary As..." />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem fx:id="menuItemSaveTextAs" mnemonicParsing="false" onAction="#menuItemSaveTextAsAction" text="Save Text As..." />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem fx:id="menuItemExit" mnemonicParsing="false" onAction="#menuItemExitAction" text="Exit" />
-              </items>
-            </Menu>
-          <Menu fx:id="menuTask" mnemonicParsing="false" onAction="#menuTaskAction" onShowing="#menuTaskOnShowing" text="Task">
-               <items>
-                  <MenuItem fx:id="menuItemTaskAdd" mnemonicParsing="false" onAction="#menuItemTaskAddAction" text="Add" />
-                  <Menu fx:id="menuRemove" mnemonicParsing="false" text="Remove">
+<BorderPane onKeyReleased="#teclaPressionadaAction" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="upskill.atletascomficheiros.ui.JanelaPrincipalSceneController">
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="Atleta">
                     <items>
-                      <MenuItem fx:id="menuItemRemoveAll" mnemonicParsing="false" onAction="#menuItemRemoveAllAction" text="All" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem fx:id="menuItemRemoveSelected" mnemonicParsing="false" onAction="#menuItemRemoveSelectedAction" text="Selected" />
+                        <Menu mnemonicParsing="false" text="Novo Atleta">
+                            <items>
+                                <MenuItem mnemonicParsing="false" onAction="#menuItemAmadorAction" text="Amador" />
+                                <MenuItem mnemonicParsing="false" onAction="#menuItemProfissionalAction" text="Profissional" />
+                                <MenuItem mnemonicParsing="false" onAction="#menuItemSemiProfissionalAction" text="Semi-Profissional" />
+                            </items>
+                        </Menu>
+                        <MenuItem mnemonicParsing="false" onAction="#menuItemSairAction" text="Sair" />
                     </items>
-                  </Menu>
-               </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <center>
-      <ListView fx:id="lstViewTarefas" onContextMenuRequested="#lstViewTarefasContextMenuRequested" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </center>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
+        <ListView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+    </center>
 </BorderPane>
