Classe Atleta foi atualizada com dois métodos para obter os tipos de atividades e intensidades de treinos.
Interface Atividade foi alterada para fornecer um Enum com os tipos de atividades. Os tipo de 
atividade fazem override to método toString().

A UI já contemple 3 scenes um para cada Atleta. Apenas a Scene do Atleta Amador está feita. As outras ainda são cópias a serem alteradas e corrigidas.

--- a/Java Files/POO/20210116-AtletasComFicheiros/src/main/resources/fxml/AtletaAmadorScene.fxml
+++ b/Java Files/POO/20210116-AtletasComFicheiros/src/main/resources/fxml/AtletaAmadorScene.fxml
@@ -113,7 +113,7 @@
                 </TextField>
                 <FlowPane alignment="CENTER_LEFT" hgap="25.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <children>
-                        <RadioButton fx:id="radioButtonFeminino" mnemonicParsing="false" text="Feminino">
+                        <RadioButton fx:id="radioButtonFeminino" mnemonicParsing="false" selected="true" text="Feminino">
                             <toggleGroup>
                                 <ToggleGroup fx:id="generoToggleGroup" />
                             </toggleGroup>
